# Ferrum

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  uno.config.ts  vite.config.ts
src/: App.vue  i18n.ts  main.ts  perf.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  commands.rs  config.rs  error.rs  formats.rs  lib.rs  library.rs  main.rs  meta_cache.rs  migration.rs  profile.rs  protocol.rs  state.rs
src-tauri/src/entity/: exif_cache.rs  histogram_cache.rs  image_metadata.rs  image_tags.rs  mod.rs  tags.rs
src-tauri/tests/: meta_cache.rs
src/api/: commands.ts  events.ts  windowEnv.ts
src/cache/: README.md  createBoundedCache.ts
src/components/: ConfirmDialog.vue  ControlBar.vue  FlatImageGrid.vue  FolderSidebar.vue  FolderTree.vue  Histogram.vue  ImageTags.vue  ImageViewer.vue  MetaBackfillIndicator.vue  Scrollbar.vue  SettingsModal.vue  TagPicker.vue  ThumbnailNavigator.vue  TitleBar.vue
src/composables/: useConfirm.ts  useDeleteConfirm.ts  useFolderBlocks.ts  useHistogramSession.ts  useImageKeyboardNav.ts  useImageNavigation.ts  useModalKeyboardGuard.ts  useMouseActions.ts  useNavigationStore.ts  usePanZoom.ts  useThumbnailBatchLoader.ts  useVirtualScroller.ts  useWindowDragRegion.ts
src/locales/: en.json  zh-CN.json
src/router/: guards.ts  index.ts
src/stores/: configStore.ts  imageStore.ts  libraryStore.ts  tagStore.ts
src/styles/: hidpi.css
src/types/: config.ts  exif.ts  folderNode.ts  image.ts  ipc.ts  library.ts  navigation.md  tags.ts
src/utils/: blobUrl.ts  invalidate.ts  invokeSafe.ts  useInflightKey.ts  useRaceCounter.ts
(+8 files in other folders)
