[package]
name = "ferrum"
version = "0.1.0"
description = "A Tauri App"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ferrum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
urlencoding = "2.1.3"
url = "2.5.8"
tauri-plugin-log = "2"
alphanumeric-sort = "1.5.5"
tauri-plugin-single-instance = "2.3.7"
image = { version = "0.25.9", features = ["default-formats"] }
jxl-oxide = "0.12.5"
exr = "1.74.0"
zune-jpeg = "0.5.11"
kamadak-exif = "0.6.1"
toml = "0.9.11"
anyhow = "1.0.100"
thiserror = "2.0.18"
once_cell = "1.21.3"
mime_guess = "2.0.5"
os_info = "3.14.0"

tokio = {version = "1", features = ["sync"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
index_vault = { git = "https://github.com/quesonal/index_vault" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 's'

